set01/problem09_compile_errors.txt
Compilation started at 10/31/2023, 11:34:05 AM
Compilation finished at 10/31/2023, 11:34:06 AM
Compilation started at 10/31/2023, 11:34:29 AM
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set01\problem09.c: In function 'square_root':
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set01\problem09.c:40:11: error: 'root' undeclared (first use in this function)
    return root;
           ^~~~
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set01\problem09.c:40:11: note: each undeclared identifier is reported only once for each function it appears in
Compilation finished at 10/31/2023, 11:34:29 AM
Compilation started at 10/31/2023, 11:34:38 AM
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set01\problem09.c: In function 'square_root':
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set01\problem09.c:40:11: error: 'root' undeclared (first use in this function)
    return root;
           ^~~~
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set01\problem09.c:40:11: note: each undeclared identifier is reported only once for each function it appears in
Compilation finished at 10/31/2023, 11:34:38 AM
Compilation started at 10/31/2023, 11:34:49 AM
Compilation finished at 10/31/2023, 11:34:49 AM
Compilation started at 10/31/2023, 11:37:39 AM
Compilation finished at 10/31/2023, 11:37:40 AM
Compilation started at 10/31/2023, 11:37:53 AM
Compilation finished at 10/31/2023, 11:37:53 AM
Compilation started at 10/31/2023, 11:42:40 AM
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set01\problem09.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
Compilation finished at 10/31/2023, 11:42:40 AM
Compilation started at 10/31/2023, 11:43:12 AM
Compilation finished at 10/31/2023, 11:43:12 AM
Compilation started at 10/31/2023, 11:43:57 AM
Compilation finished at 10/31/2023, 11:43:58 AM
Compilation started at 10/31/2023, 3:22:07 PM
Compilation finished at 10/31/2023, 3:22:07 PM
Compilation started at 11/16/2023, 4:30:23 PM
Compilation finished at 11/16/2023, 4:30:23 PM
Compilation started at 11/16/2023, 4:30:38 PM
Compilation finished at 11/16/2023, 4:30:38 PM
Compilation started at 11/16/2023, 7:57:34 PM
Compilation finished at 11/16/2023, 7:57:35 PM
Compilation started at 11/16/2023, 7:57:47 PM
Compilation finished at 11/16/2023, 7:57:47 PM
Compilation started at 11/16/2023, 8:01:25 PM
Compilation finished at 11/16/2023, 8:01:25 PM
Compilation started at 11/16/2023, 8:44:57 PM
Compilation finished at 11/16/2023, 8:44:57 PM
Compilation started at 11/20/2023, 10:05:11 AM
Compilation finished at 11/20/2023, 10:05:12 AM
Compilation started at 11/20/2023, 10:05:37 AM
Compilation finished at 11/20/2023, 10:05:38 AM
Compilation started at 11/20/2023, 10:06:27 AM
Compilation finished at 11/20/2023, 10:06:27 AM
Compilation started at 11/20/2023, 10:13:11 AM
Compilation finished at 11/20/2023, 10:13:12 AM
Compilation started at 11/20/2023, 10:13:48 AM
Compilation finished at 11/20/2023, 10:13:48 AM
Compilation started at 11/20/2023, 10:14:06 AM
Compilation finished at 11/20/2023, 10:14:06 AM
Compilation started at 11/20/2023, 10:14:25 AM
Compilation finished at 11/20/2023, 10:14:25 AM
Compilation started at 11/20/2023, 10:17:20 AM
Compilation finished at 11/20/2023, 10:17:21 AM
Compilation started at 11/20/2023, 10:17:29 AM
Compilation finished at 11/20/2023, 10:17:29 AM
Compilation started at 11/20/2023, 10:17:34 AM
Compilation finished at 11/20/2023, 10:17:34 AM
Compilation started at 11/20/2023, 10:19:07 AM
Compilation finished at 11/20/2023, 10:19:07 AM
Compilation started at 11/20/2023, 10:23:01 AM
Compilation finished at 11/20/2023, 10:23:02 AM
Compilation started at 11/20/2023, 10:23:09 AM
Compilation finished at 11/20/2023, 10:23:09 AM
Compilation started at 11/20/2023, 10:23:18 AM
Compilation finished at 11/20/2023, 10:23:18 AM
Compilation started at 11/20/2023, 10:24:13 AM
Compilation finished at 11/20/2023, 10:24:14 AM
Compilation started at 11/20/2023, 10:24:20 AM
Compilation finished at 11/20/2023, 10:24:20 AM
Compilation started at 11/20/2023, 10:24:53 AM
Compilation finished at 11/20/2023, 10:24:53 AM
Compilation started at 11/20/2023, 10:25:02 AM
Compilation finished at 11/20/2023, 10:25:03 AM
Compilation started at 11/20/2023, 10:25:13 AM
Compilation finished at 11/20/2023, 10:25:13 AM
Compilation started at 11/28/2023, 9:45:45 PM
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set01\problem09.c: In function 'square_root':
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set01\problem09.c:28:17: warning: implicit declaration of function 'fabs' [-Wimplicit-function-declaration]
         sqrroot=fabs(0.5*(x0+(n/x0)));
                 ^~~~
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set01\problem09.c:28:17: warning: incompatible implicit declaration of built-in function 'fabs'
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set01\problem09.c:28:17: note: include '<math.h>' or provide a declaration of 'fabs'
Compilation finished at 11/28/2023, 9:45:45 PM
Compilation started at 11/28/2023, 9:46:03 PM
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set01\problem09.c: In function 'square_root':
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set01\problem09.c:28:17: warning: implicit declaration of function 'fabs' [-Wimplicit-function-declaration]
         sqrroot=fabs(0.5*(x0+(n/x0)));
                 ^~~~
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set01\problem09.c:28:17: warning: incompatible implicit declaration of built-in function 'fabs'
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set01\problem09.c:28:17: note: include '<math.h>' or provide a declaration of 'fabs'
Compilation finished at 11/28/2023, 9:46:03 PM
Compilation started at 11/28/2023, 9:48:25 PM
Compilation finished at 11/28/2023, 9:48:25 PM
Compilation started at 11/28/2023, 10:06:37 PM
Compilation finished at 11/28/2023, 10:06:37 PM
Compilation started at 11/28/2023, 10:17:06 PM
Compilation finished at 11/28/2023, 10:17:07 PM
Compilation started at 11/29/2023, 10:51:00 AM
Compilation finished at 11/29/2023, 10:51:00 AM
Compilation started at 11/29/2023, 10:51:18 AM
Compilation finished at 11/29/2023, 10:51:18 AM
Compilation started at 11/29/2023, 10:53:23 AM
Compilation finished at 11/29/2023, 10:53:23 AM
Compilation started at 11/29/2023, 10:53:46 AM
Compilation finished at 11/29/2023, 10:53:46 AM
Compilation started at 11/29/2023, 1:34:22 PM
Compilation finished at 11/29/2023, 1:34:22 PM
